--- a/customers.html
+++ b/customers.html
@@ -165,6 +165,10 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+	
 table, td, tr, th {
 	border: solid;
     border-width: 2px;
@@ -205,4 +209,9 @@ li a:hover {
   color: white;
 }
 
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 </style>
