--- a/final_submissions/orders.html
+++ b/final_submissions/orders.html
@@ -19,10 +19,10 @@
     <legend><H2>Orders</H2></legend>
     <table class="table">
         <thead>
-            <th>order_ID</th>
-            <th>invoice_ID</th>
-            <th>order_amount</th>
-            <th>product_serial_number</th>
+            <th>Order ID</th>
+            <th>Invoice ID</th>
+            <th>Order Amount</th>
+            <th>Product Serial Number</th>
             <th>Modify Order</th>
             <!-- Remove not required
             
@@ -97,14 +97,18 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+
 table, td, tr, th {
-	border: solid;
+    border: solid;
     border-width: 2px;
 }
 form {
-	border: solid;
+    border: solid;
     border-width: 2px;
-	width: 100%
+    width: 100%
 }
 fieldset{
     border: none;
@@ -116,7 +120,7 @@ ul {
   margin: 0;
   padding: 0;
   width: auto;
-  background-color: #B0C4DE	;
+  background-color: #B0C4DE ;
   overflow: hidden;
 }
 
@@ -135,6 +139,12 @@ li a {
 li a:hover {
   background-color: #4682B4;
   color: white;
+}
+
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 </style>
