--- a/final_submissions/employees.html
+++ b/final_submissions/employees.html
@@ -20,9 +20,9 @@
     <table class="table">
         <thead>
             <th hidden>employee_ID</th>
-            <th>first_name</th>
-            <th>last_name</th>
-            <th>job_title</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Job Title</th>
             <th>Location</th>
 <!-- Remove since not required
             <th>Modify Employee</th>
@@ -38,10 +38,6 @@
         <td>{{ employee[2] }}</td>
         <td>{{ employee[3] }}</td>
         <td>{{ employee[4] }}</td>
-<!-- Remove since not required
-        <td><button type="button" onclick="updateEmp({{ employee[0] }})">Modify</button></td>
-        <td><button type="button" onclick="deleteEmp({{ employee[0] }})">Delete</button></td>
-    -->
     </tr>
     {% endfor %}
 
@@ -86,14 +82,18 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+
 table, td, tr, th {
-	border: solid;
+    border: solid;
     border-width: 2px;
 }
 form {
-	border: solid;
+    border: solid;
     border-width: 2px;
-	width: 100%
+    width: 100%
 }
 fieldset{
     border: none;
@@ -105,7 +105,7 @@ ul {
   margin: 0;
   padding: 0;
   width: auto;
-  background-color: #B0C4DE	;
+  background-color: #B0C4DE ;
   overflow: hidden;
 }
 
@@ -124,6 +124,12 @@ li a {
 li a:hover {
   background-color: #4682B4;
   color: white;
+}
+
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 </style>
