--- a/final_submissions/warehouse_inventory.html
+++ b/final_submissions/warehouse_inventory.html
@@ -25,6 +25,7 @@
             <th>Serial Number</th>
             <th>Brand</th>
             <th>Model</th>
+            <th>Location Quantity</th>
             <th>Delete Inventory</th>
         </thead>
 
@@ -37,6 +38,7 @@
         <td>{{ inv[1] }}</td>
         <td>{{ inv[3] }}</td>
         <td>{{ inv[4] }}</td>
+        <td>{{ inv[6] }}</td>
         <td><button type="button" onclick="window.location='{{ url_for('delete_whInv', id = inv[5] ) }}'">Delete</button></td>
     </tr>
     {% endfor %}
@@ -74,6 +76,10 @@
           -->
         </label>
         <br>
+        <label>Location Quantity:
+            <input type="number" name="stock_quantity" size="30" maxlength="100">
+        </label>
+        <br>
         <input type="submit" value="Submit Warehouse Inventory" onclick="submit_warehouse_inventory()"/>
     </form>
 
@@ -85,14 +91,18 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+
 table, td, tr, th {
-	border: solid;
+  border: solid;
     border-width: 2px;
 }
 form {
-	border: solid;
+  border: solid;
     border-width: 2px;
-	width: 100%
+  width: 100%
 }
 fieldset{
     border: none;
@@ -104,7 +114,7 @@ ul {
   margin: 0;
   padding: 0;
   width: auto;
-  background-color: #B0C4DE	;
+  background-color: #B0C4DE ;
   overflow: hidden;
 }
 
@@ -123,6 +133,12 @@ li a {
 li a:hover {
   background-color: #4682B4;
   color: white;
+}
+
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 </style>
